Update no-items message and improve localStorage error handling

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <main>
       <div class="no-items" hidden>
         <p>
-          No items in your to-do list. To add items, press the button in the
-          lower left or press "enter".
+          No items in your to-do list. To add items, press the New Item button
+          in the lower left or press "enter".
         </p>
       </div>
       <div id="items-container">
