Refactor HTML structure, enhance JavaScript functionality, and improve CSS styles for better user experience

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
   </head>
+
   <body>
     <header><h1>To-Do List</h1></header>
+
     <main>
       <div class="no-items" hidden>
         <p>
@@ -23,21 +25,7 @@
         </p>
       </div>
       <div id="items-container">
-        <!-- Add this programmatically in js
-        <div class="item">
-          <button
-            class="item-button"
-            type="button"
-            title="Mark Completed"
-          ></button>
-          <input
-            type="text"
-            placeholder="Input item"
-            name="item"
-            class="input"
-            autocomplete="off"
-          />
-        </div> -->
+        <!-- Items will be dynamically added here -->
       </div>
       <button type="button" id="new-item-button">
         <img src="plus-icon.svg" width="18" height="18" alt="plus icon" />
